0.74    
        Updated version on Text::WikiFormat dependency to avoid long-standing
        test failure with old version

0.73    12 December 2006
        Added parse_feed_timestamp method
        Added encoding parameter to the Feed methods, to allow overriding
          the store's encoding.

0.72    15 September 2006
        Install wiki-toolkit-rename-node

0.71    30 August 2006
        More feed code refactoring, to allow "mini" feeds with just
          name, and optionally distance and location. Typically used in
          search results, especially with Wiki::Toolkit::Plugin::Locator's
        Ability to filter by nodes without certain metadata, by type
          or type+value ("everything without a longitude" or 
          "everything not category=Pub")
        Fix bug in Listing.pm pod output

0.70    6 June 2006
        Feed code has been refactored.
        Check that the database schema is up-to-date when initializing the
          store and abort otherwise.
        In PostgresSQL setup code, delete orphaned content/metadata rows.
        When we bulk delete and insert data for an upgrade, check to make
          sure we can create the tables and indexes before dropping the old
          tables.
        Other miscellaneous fixes.

0.69_03 13 May 2006
        Add Wiki::Toolkit::Feed::RSS (formerly CGI::Wiki::Plugin::RSS::Modwiki)
          and Wiki::Toolkit::Feed::Atom (formerly CGI::Wiki::Plugin::Atom)

0.69_02 27 April 2006
        Add missing new file lib/Wiki/Toolkit/Setup/Database.pm to
          distribution.

0.69_01 23 April 2006
        *** IMPORTANT NOTICE *** This release introduces a new database schema
        which should be considered beta in nature at this stage. It is not yet
        suitable for deployment on production data and should only be tested
        on copies of your production data. If it eats your data, you get to
        keep the pieces. Additionally, functionality exposed in this beta